# coldtype

./: .coldtype.py  .coldtype.win.py  .gitignore  BUILD.md  CHANGELOG.md  IDEAS.md  Makefile  README.md  README_EXTRAS.md  README_MORE.md  TODO  _setup.py  blender_scratch.py  buildenv  coldtype.py  example.py  minimal_glfw.py  profile.py  pyproject.toml  release.sh  render.py  render2.py  requirements-dev.txt  requirements.txt  run_check.py  run_tests.sh  setup.py  skia_simple.py  test-venv.sh  test.py  test_skia.py  update_goggles.py  upload_docs.sh
adobe-panel/: .debug  PProPanel.jsx  README.md  adobe-panel  ext.js  index.html
adobe-panel/CSXS/: manifest.xml
adobe-panel/css/: style.css
adobe-panel/jsx/: general.jsx
assets/: .gitignore  ColdtypeObviously.designspace  README.md  loop.mid  noto.py
assets/ColdtypeObviously_BlackItalic.ufo/: fontinfo.plist  groups.plist  lib.plist
assets/ColdtypeObviously_CompressedBlackItalic.ufo/: fontinfo.plist  groups.plist  lib.plist
assets/NumericHyperScrypt.ufo/: fontinfo.plist  lib.plist
assets/logos.ufo/: lib.plist
coldtype/: __init__.py  _viewer.html  axidraw.py  beziers.py  blender.py  color.py  css.py  datpen.py  drawbot.py  filtering.py  fontmaker.py  freetype.py  geometry.py  grid.py  gs.py  gsh.py  harfbuzz.py  helpers.py  interpolation.py  notebook.py  osutil.py  pens.py  previewer.html  previewer.py  random.py  raster.py  remote.py  render.py  renderable.py  shaper.py  skiashim.py  svg.py  test.py  tool.py  ufo.py  utils.py  viewer.py  warping.py
coldtype/abbr/: __init__.py  _build_dpl.py  dp_auto_abbrev.py  inst.py
coldtype/animation/: __init__.py  audio.py  easing.py  loop.py  midi.py  premiere.py  sequence.py  time.py  timeable.py  timeline.py
coldtype/assets/: glyphNamesToUnicode.txt  viewer.css
coldtype/blender/: __init__.py  fluent.py  internal_panel.py  livepreview.py  panel3d.py  render.py  timedtext.py  util.py  watch.py
coldtype/capture/: __init__.py
coldtype/color/: __init__.py  color.py
coldtype/demo/: asciiview.py  blank.py  boiler.py  boiler_renderable.py  demo.py  gifski.py  glyphs.py  midi.py  vf.py  viewseq.py
coldtype/drawing/: __init__.py  drawing.py
coldtype/fontgoggles/: README.md
coldtype/fx/: diagram.py  shapes.py  skia.py  warping.py  xray.py
coldtype/geometry/: __init__.py  atom.py  curve.py  edge.py  geometrical.py  line.py  point.py  primitives.py  rect.py
coldtype/grid/: __init__.py
coldtype/img/: abstract.py  blendmode.py  datimage.py  drawbotimage.py  skiaimage.py
coldtype/integrations/: blender.py  blender_script_template.py
coldtype/interpolation/: __init__.py
coldtype/midi/: controllers.py
coldtype/notebook/: __init__.py  parser.py
coldtype/path/: __init__.py  path.py
coldtype/pens/: _build_dpl.py  abbr.py  axidrawpen.py  blenderpen.py  cairopen.py  datimage.py  datpen.py  datpenlikeobject.py  datpenset.py  dattext.py  dp_abbrev.py  dp_auto_abbrev.py  draftingpen.py  draftingpens.py  drawablepen.py  drawbot_utils.py  drawbotpen.py  jsonpen.py  misc.py  outlinepen.py  pdfpen.py  postscriptpen.py  rendererdrawbotpen.py  reportlabpen.py  runonpen.py  skiadraftingpen.py  skiapathpen.py  skiapen.py  svgpen.py  translationpen.py
coldtype/physics/: pymunk.py
coldtype/renderable/: __init__.py  animation.py  font.py  renderable.py  tools.py  ui.py
coldtype/renderer/: .coldtype.py  __init__.py  config.py  keyboard.py  midi.py  picklejar.py  reader.py  state.py  ui.py  utils.py  watchdog.py  windowmanager.py
coldtype/runon/: __init__.py  _path.py  arrangement.py  layout.py  mondrian.py  path.py  runon.py  scaffold.py
coldtype/scripts/: blender-install.py
coldtype/sh/: __init__.py  context.py
coldtype/text/: __init__.py  composer.py  font.py  reader.py  richtext.py  shaper.py  style.py
coldtype/time/: __init__.py  ascii.py  audio.py  clip.py  easing.py  loop.py  midi.py  sequence.py  timeable.py  (+2 more)
docs/: .gitignore  about.rst  cheatsheet.rst  conf.py  download_colabs.py  index.rst  install.rst  logo.py  pens.rst  text.rst  upload.sh  write.py  writer.py
examples/: .gitignore  808.py  alphabet.py  animation.py  apkjr.py  apng.py  appicon.py  axidraw_hatching.py  bg_fn.py  bg_img.py  blog.py  borders.py  br_mod.py  capture.py  chessboard.py  circle_text.py  coldtype_test.prproj  colrv1_arabic.py  cropandrepeat.py  custom_hotkey.py  designspace.py  diagram.py  direct_uharfbuzz.py  displace_map.py  drawbot_image.py  easing.py  example.py  freeze.py  generative_font.py  generative_font2.py  github_social.py  google_font.py  grid_shapes.py  gridsystems.py  image_in_path.py  image_rotate.py  image_rotated_quality.py  instancer.py  interpolated_spiral.py  interrupted_lines.py  (+49 more)
experiments/: captured_renders.py  capturing_renders.py  external_reader.py  external_writer.py  opcam1.py  opcam_phototype.py  opcam_recorder.py
scripts/: inline_mixins.py  keyboard_layout_converter.py  robofont_coldtype.py
test/: .gitignore  README.md  _test_cbp.py  _test_chetbaker2.py  _test_drawbot_renderable_animation.py  _test_drawing_history.pickle  _test_inline2.py  coldtype.blend  db_preamble.py  lyric_data.json  lyric_data2.json  oval.pickle  runner.py  scratch.py  source_file.py  source_file_with_config.py  test.py  test_abbrv.py  test_ableton.py  test_all.py  test_animation.py  test_arrangement.py  test_axidraw.py  test_blendmode.py  test_box_select.py  test_cairo.py  test_cairopen.py  test_calc_alpha.py  test_callback_animation.py  test_cbp.py  test_cdelopty.py  test_chetbaker.py  test_chetbaker2.py  test_chetbaker3.py  test_coldtype_args.py  test_color.py  test_color_palette.py  test_composer.py  test_composite.py  test_contactsheet.py  (+118 more)
tests/: _img_only.py  test_color.py  test_drawbot.py  test_fonts.py  test_fx.py  test_glyphwise.py  test_i18n.py  test_mondrian.py  test_pens.py  test_reader.py  test_rect.py  test_richtext.py  test_scaffold.py  test_src_macro.py  test_text.py  test_versions.py  test_versions_versions.py
viewer/: .gitignore  README.md  appicon.icns  appicon.py  build.sh  index.html  main.js  notarize.js  package-lock.json  package.json
(+699 files in other folders)
