[project]
name = "coldtype"
version = "0.11.5"
description = "Functions for manual vectorized typesetting."
readme = "README.md"
authors = [
    { name = "Rob Stenson", email = "rob.stenson@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fontPens==0.2.4",
    "easing-functions==1.0.4",
    "mido==1.3.2",
    "defcon==0.10.3",
    "requests==2.32.3",
    "b3denv>=0.0.12",
    "ufo2ft>=3.2.8", # pin for fg issue
    "coldtype-fontgoggles>=1.8.4.6",
]

[project.urls]
Homepage = "https://coldtype.xyz"
Documentation = "https://coldtype.goodhertz.com"
Repository = "https://github.com/coldtype/coldtype"
Issues = "https://github.com/coldtype/coldtype/issues"
Changelog = "https://github.com/coldtype/coldtype/blob/main/CHANGELOG.md"

[project.optional-dependencies]
drawbot = ["numpy"]
viewer = ["glfw", "PyOpenGL", "skia-python", "skia-pathops", "numpy", "potracer"]
unicode = ["unicodedata2"]
blender = ["skia-pathops", "ufoLib2"]
notebook = ["skia-pathops", "skia-python", "potracer", "tdqm"]
audio = ["pyaudio", "soundfile"]
website = [
    "jinja2",
    "python-frontmatter",
    "livereload",
    "Markdown",
    "markdown-captions",
    "beautifulsoup4",
    "brotli",
    "lxml",
    "pygments",
    "sourcetypes",
    "favicons",
]

[project.scripts]
coldtype = "coldtype.renderer:main"
ct = "coldtype.renderer:main"
ctb = "coldtype.renderer:main_b3d"

[tool.setuptools]
license-files = [] # https://github.com/astral-sh/uv/issues/9513#issuecomment-2519527822

[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools-scm >= 8.0"]
build-backend = "setuptools.build_meta"
